--- a/index.html
+++ b/index.html
@@ -261,6 +261,9 @@ closeBtn.addEventListener('click',()=>{
 viewer.camera.setView({
     destination: Cesium.Cartesian3.fromDegrees(20,20,10000000)
 });
+viewer.scene.screenSpaceCameraController.minimumZoomDistance = 5000000;
+viewer.scene.screenSpaceCameraController.maximumZoomDistance = 7000000*3.14;
+
 
 label.style.display='none';
 
