--- a/index.html
+++ b/index.html
@@ -91,6 +91,53 @@ html, body, #cesiumContainer {
         font-size: 24px;
     }
 }
+
+/* Nowy styl loading screen */
+#loadingScreen {
+    position: fixed;
+    top:0; left:0;
+    width:100%; height:100%;
+    background: linear-gradient(135deg,#6fb1fc,#4364f7);
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+    opacity: 1;
+    transition: opacity 1s ease-in-out;
+    flex-direction: column;
+    font-family: system-ui;
+}
+
+#loaderContent {
+    text-align: center;
+}
+
+.spinner {
+    width: 60px;
+    height: 60px;
+    border: 6px solid #ffffff44;
+    border-top: 6px solid #fff;
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+    margin-bottom: 20px;
+}
+
+@keyframes spin {
+    from {transform: rotate(0deg);}
+    to {transform: rotate(360deg);}
+}
+
+#loadingText {
+    font-size: 1.5em;
+    margin-top: 0.5em;
+    transition: opacity 0.8s ease;
+}
+
+#loadingScreen.hide {
+    opacity: 0;
+    pointer-events: none;
+}
 </style>
 </head>
 <body>
@@ -101,6 +148,14 @@ html, body, #cesiumContainer {
     <div id="closeBtn">✕</div>
     <h3 id="labelHeader"></h3>
     <ul id="labelList"></ul>
+</div>
+
+<!-- DODAJ PRZED CESIUM CONTAINER -->
+<div id="loadingScreen">
+  <div id="loaderContent">
+    <div class="spinner"></div>
+    <div id="loadingText">Ładowanie globusa...</div>
+  </div>
 </div>
 
 <script>
@@ -128,6 +183,16 @@ const RAW_DATA = `
 7|USA|Alaska - Anchorage|-149.9003|61.2181|marathon|20.06.2026
 8|Canada|Vancouver|-123.1207|49.2827|half marathon|28.06.2026
 `;
+const loadingScreen = document.getElementById('loadingScreen');
+// Flag, które mówią czy wszystko jest załadowane
+let imageryReady = false;
+let geoJsonReady = false;
+
+// Funkcja ukrywania ekranu ładowania z animacją fade out
+function hideLoadingScreen() {
+    loadingScreen.classList.add('hide');
+    setTimeout(()=> loadingScreen.style.display='none', 1000); // po zakończeniu fade-out
+}
 
 function parseMarathons(text){
     const lines = text.split(/\r?\n/).filter(l=>l.trim());
@@ -172,9 +237,29 @@ viewer.imageryLayers.addImageryProvider(
     })
 );
 
+// Funkcja sprawdzająca, czy wszystkie elementy gotowe
+function checkLoading() {
+    if (imageryReady && geoJsonReady) {
+        // Małe opóźnienie, żeby użytkownik zobaczył efekt „malowania”
+        setTimeout(() => hideLoadingScreen(), 500);
+    }
+}
+
+function showLoadingText(newText) {
+    const textEl = document.getElementById('loadingText');
+    // Fade out
+    textEl.style.opacity = 0;
+    setTimeout(() => {
+        textEl.innerText = newText;
+        // Fade in
+        textEl.style.opacity = 1;
+    }, 300); // czas dopasowany do transition CSS
+}
+
+
 // OPTIONAL:
 // półprzezroczysta nakładka OSM z etykietami:
-viewer.imageryLayers.addImageryProvider(
+const layer = viewer.imageryLayers.addImageryProvider(
     new Cesium.UrlTemplateImageryProvider({
         url: 'https://{s}.tile.openstreetmap.fr/hot/{z}/{x}/{y}.png',
         subdomains: ['a','b','c'],
@@ -185,7 +270,33 @@ viewer.imageryLayers.addImageryProvider(
     })
 );
 
-Cesium.GeoJsonDataSource.load('countries2.geojson', {
+viewer.scene.globe.tileLoadProgressEvent.addEventListener((count) => {
+    // count = liczba aktualnie ładowanych tiles
+    if (count === 0 && !imageryReady) {
+        imageryReady = true;
+        showLoadingText('Malowanie krajów...');
+        checkLoading();
+    }
+});
+
+
+function waitForGeoJsonRender(dataSource, callback) {
+    const scene = viewer.scene;
+    const entities = dataSource.entities.values;
+
+    const handler = scene.postRender.addEventListener(function() {
+        // Sprawdzamy, czy wszystkie polygony mają przypisany materiał i są gotowe do renderowania
+        const allReady = entities.every(e => e.polygon && e.polygon.material);
+        if (allReady) {
+            // usuń listener i wywołaj callback
+            handler();
+            callback();
+        }
+    });
+}
+
+
+Cesium.GeoJsonDataSource.load('countries.geojson', {
     clampToGround: false
 }).then(function(ds){
     viewer.dataSources.add(ds);
@@ -194,17 +305,11 @@ Cesium.GeoJsonDataSource.load('countries2.geojson', {
         e.polygon.outline = true;
         e.polygon.outlineColor = Cesium.Color.BLACK;
     });
+    waitForGeoJsonRender(ds, () => {
+            geoJsonReady = true;
+            checkLoading();
+        });
 });
-
-/*viewer.imageryLayers.addImageryProvider(
-    new Cesium.UrlTemplateImageryProvider({
-        url: 'https://{s}.tile.openstreetmap.fr/hot/{z}/{x}/{y}.png',
-        subdomains: ['a','b','c'],
-        minimumLevel: 0,
-        maximumLevel: 19,
-        credit: '© OpenStreetMap contributors'
-    })
-);*/
 
 viewer.scene.globe.enableLighting = true;
 viewer.scene.skyAtmosphere.show = true;
