--- a/index.html
+++ b/index.html
@@ -322,12 +322,12 @@ const viewer = new Cesium.Viewer('cesiumContainer',{
 
 viewer.imageryLayers.removeAll();
 
-viewer.imageryLayers.addImageryProvider(
+/*viewer.imageryLayers.addImageryProvider(
     new Cesium.SingleTileImageryProvider({
         url: 'https://eoimages.gsfc.nasa.gov/images/imagerecords/57000/57730/world.topo.bathy.200412.3x5400x2700.jpg',
         rectangle: Cesium.Rectangle.fromDegrees(-180, -90, 180, 90)
     })
-);
+);*/
 
 
 function showLoadingText(newText) {
