--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Cesium Marathon Globe</title>
+<!-- Open Graph -->
+<meta property="og:title" content="Marathon Map">
+<meta property="og:description" content="Interaktywna mapa maratonu – sprawdź trasę i szczegóły wydarzenia.">
+<meta property="og:image" content="https://thegift20obj.github.io/marathon-map/preview.jpg">
+<meta property="og:url" content="https://thegift20obj.github.io/marathon-map/">
+<meta property="og:type" content="website">
 
 <script src="https://unpkg.com/cesium@1.111.0/Build/Cesium/Cesium.js"></script>
 <link href="https://unpkg.com/cesium@1.111.0/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
